# HW89/stories/app/controllers/api/v1/comments_controller.rb
@@ -1,18 +1,13 @@
 class Api::V1::CommentsController < ApplicationController
   before_action :set_comment, only: %i[like show update destroy]
 
-  # GET /api/v1/comments
-  # or
-  # GET /api/v1/comments?status=published
   def index
     @comments = Comment.all
     @comments = @comments.where(status: params[:status]) if params[:status]
-    # @comments = Comment.where(status: params[:status] || :unpublished)
 
     render json: @comments
   end
 
-  # POST /api/v1/comments
   def create
     @comment = Comment.new(comment_params)
     if @comment.save
@@ -23,32 +18,22 @@ class Api::V1::CommentsController < ApplicationController
 
   end
 
-  # PUT/PATCH /api/v1/comments/:id
   def update
-    @comment.update(comment_params)#(comment_update_status_params)
-
-    render json: @comment
+    if @comment.update(comment_params)
+      render json: @comment
+    else
+      render json: @comment.errors.messages, status: 422
+    end
   end
 
-  # GET /api/v1/comments/:id
   def show
     render json: { comment: @comment, like: @comment.likes }
   end
 
-   # DELETE /api/v1/comments/:id
   def destroy
     @comment.delete
 
     render json: :ok
-  end
-
-   # POST /api/v1/comments/:id/like
-  def like
-    @like = Like.new(like_params)
-    @like.liked = @comment
-    @like.save
-
-    render json: @like
   end
 
   private
@@ -62,10 +47,7 @@ class Api::V1::CommentsController < ApplicationController
   end
 
   def comment_params
-    params.require(:comment).permit(:status, :body, :article_id, :author_id, :status)
+    params.require(:comment).permit(:status, :body, :article_id, :author_id)
   end
 
-  # def comment_update_status_params
-  #   params.require(:comment).permit(:status)
-  # end
 end
