# HW89/stories/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2022_12_14_120513) do
+ActiveRecord::Schema[7.0].define(version: 2022_12_18_211329) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -49,11 +49,11 @@ ActiveRecord::Schema[7.0].define(version: 2022_12_14_120513) do
   end
 
   create_table "likes", force: :cascade do |t|
-    t.string "title"
     t.string "likeable_type"
     t.bigint "likeable_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.bigint "author_id", default: 1, null: false
     t.index ["likeable_type", "likeable_id"], name: "index_likes_on_likeable"
   end
 
